[package]
name = "eappx"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aes = "0.8.4"
binrw = "0.13.3"
flate2 = { version = "1.0.28", features = ["zlib-ng"] }
hex = "0.4.3"
uuid = "1.7.0"
sha2 = "0.10.8"
xmlserde = "0.7"
xmlserde_derives = "0.7"
xts-mode = { version = "0.5.1", features = ["openssl"] }
base64ct = { version = "1.6.0", features = ["std"] }
log = "0.4.21"
thiserror = "1"

[workspace]
members = [
    "makeappx",
]
