[package]
name = "makeappx"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
clap = { version = "4.5.1", features = ["derive"] }
eappx = { path = "../" }
hex = "0.4.3"
indicatif = "0.17.8"
log = "0.4.21"
simple_logger = "4.3.3"
uuid = "1.7.0"
